# yapis_additional_task

./: .gitignore  module.wasm  module.wat  module.wat.txt  parse_runner.py  parser_runner.py  pyproject.toml  readme.md  run.sh  runtime.js
compiler/bones/: grammarNumLang.g4  grammarNumLang.g4.txt  grammarNumLang.interp  grammarNumLangLexer.interp  grammarNumLangLexer.py  grammarNumLangLexer.tokens  grammarNumLangListener.py  grammarNumLangParser.py  grammarNumLangVisitor.py
compiler/src/: ast_builder.py  ast_nodes.py  errors.py  formatter.py  semantic_analyzer.py  symbol_table.py  type_system.py  wat_emitter.py
examples/correct/: approximate copy.expr.txt  approximate.expr  area.expr  discriminant.expr  fibonacci copy.expr.txt  fibonacci.expr  solve_LU_expr copy.expr.txt  solve_LU_expr.expr  template_selector.expr  template_square_with_average.expr  template_swap_max — копия.expr.txt  template_swap_max.expr
examples/sem_error/: exp_error.expr  flow_error.expr  func_erorr.expr
examples/synt_error/: all_in_error.expr  func_error.expr  type_erorr.expr
src/: ast_builder.py  wat_emitter.py
wat/: area.wat  discriminant.wat  fibonacci.wat  solveLU.wat  template_selector.wat  template_square_with_average.wat  template_swap_max_default.wat
